// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Author component 1`] = `
<div>
  <h2>
    Authors
  </h2>
</div>
`;

exports[`renders Book component 1`] = `
<div>
  <h2>
    Books
  </h2>
  ;
</div>
`;
